<resources>
    <string name="app_name">iSanPablo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">San Pablo City Application</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_bpo">BPLO Fill Up</string>
    <string name="chkCon">Establishing connection&#8230;</string>
    <string name="tryAgain"><a>Try Again</a></string>
    <string name="noConWarn">No Connection</string>
    <string name="data_privacy_policy">
        \t\t By submitting this as a fully accomplished form; you hereby consent to the collection,
        generation, use, processing, storage and retention of your personal data by the City
        Government of San Pablo as provided for in the Data Privacy Act of 2012. \n
    </string>
    <string name="data_privacy_policy1">
\t \t Terms and Conditions of use will apply to any who will access and/or use by you, the user of the iSanPablo App.
        The content and any services of the app is created and operated by PYLON International
        Trading Corporation in behalf of Thermozone Philippines Incorporated as the entity awarded
        thru public bidding with this undertaking/project by the City Government of San Pablo, Laguna, Philippines.  \n

  \t \t  Please read thoroughly the so that you will know your rights and obligations when using this application.
        If you do not agree to the TERMS AND CONDITIONS, click “Disagree” to force close the application.
        By accepting or clicking the “I Agree” shows that you agree to the Terms and Condition submitted
        by the PYLON International Trading Corporation and San Pablo City Government.  \n

    </string>
    <string name="general_terms">
a.	Terms and Conditions apply to the use of the application. If the user does not agree with
        these Terms and Conditions that is shown, the user must not access and/or use the application. \n \n
b.	The Application Resources and Services are limited to the user who are of legal age and have legal capacity
        to understand and to sign form of contract under any applicable law.
        By using this application, the user warrants that they are of legal age
        or at least 18 years old to understand and allowed to enter into a contract. \n\n
c.	San Pablo City and/or PYLON International Trading Company may alter the Terms and Conditions
        at any time. By continuing the to use this application, the user must need to agree to the
        new alter Terms and Conditions. If the user disagrees to the alter Terms and Conditions,
        the user may not enter to the application and force to shut down the application. \n\n
d.	If any requirements of these Terms and Conditions are held to be invalid, the other Terms and Conditions
        will still remain effective. San Pablo City Government and/or PYLON International
        Trading Company may replace the invalid with new ones. \n
    </string>
    <string name="right_of_use">
              \t\t PYLON International Trading Corporation and San Pablo City Government grants the user a limited,
        reliable, non-transferable right to access and use the App in accordance this Terms and Conditions. \n
    </string>
    <string name="application_content">
           a.	The application is developed by PYLON International Trading Corporation
        for Thermozone Philippines Corporation as commissioned thru a service agreement
        by app owner San Pablo City Government. PYLON International Trading Company and the
        San Pablo City Government is not able to determine the definite resources of the
        content developed/uploaded in the application. For those who will claim or content-owner
        of the uploaded file or content shall be reckoned to be the owner of the such content or
        upload the file and/or to be licensed or have permission to use the content.
        The user that are not licensed or not have permission, are prohibited to upload
        any information or content of the application. All the content, including this shall
        be in the “Application Content”. \n\n
b.	The user of the application agrees that PYLON International
        Trading Corporation and/ or San Pablo City Government does
        not screen the application or any application content and that PYLON
        International Trading Corporation and/or San Pablo City Government has
        no influence over the application content or any use of the application by the user.  \n\n
c.	Revising, bound, review, remove or add on the application content of the App will
        be only done by PYLON International Trading Corporation and/or San Pablo City
        Government. PYLON International Trading Corporation and/or San Pablo City Government
        also has the rights to limit and/ or ban the user for using the application or
        application content if the user violates the Terms and Condition or at accountability of disobeying the law.  \n\n
d.	Anyone who misuse or abuse the usage of the application, break through the Terms
        and Conditions that can negatively affect the PYLON International Trading Corporation,
        San Pablo City Government, or the public may temporarily or permanently
        will be prohibited using the application and take action for accessing or downloading the application.  \n\n
e.	The user must agree that the PYLON International Trading Corporation and/or San Pablo City
        Government has the rights to publish and public it to all the user uploaded content to
        the application. If the user uploaded a content to the application, he/she will be
        solely responsible and for any consequences by publishing it to the application. \n\n
f.	The user must agree that the PYLON International and/ or San Pablo City Government has
        the right, without prior consent, to delete or remove any uploaded content by the user to the application.  \n

    </string>
    <string name="third_party_content">
a.	PYLON International Trading Corporation and or/ San Pablo City Government
        have contents that are connected to the “Third Party”. By using the
        content of the “Third Party” shall be administered by their own Terms
        and Conditions/ License Agreement by using their website that will be
        provided by them. To access to the “Third Party” content they must comply
        to the Terms and Conditions or License Agreement. PYLON International
        Trading Corporation/ San Pablo City Government is not responsible for
        the accessibility of any content of the “Third Party”. \n\n
b.	The user of the application is the one responsibility at their own usage.
        PYLON International Trading Corporation and/or San Pablo City Government
        has no responsibility of loss of any information or damage files caused
        by hacking or malicious software or for any damage or loss to the user
        by having this application. Personal Information or any information that
        the user giving using the application may acquire by the hackers or other
        “Third party”. Viruses and other malicious software may be on the internet
        that the user’s visit may infect the one’s user using.\n\n
c.	The user of the application must agree that PYLON International
        Trading Corporation and/ or San Pablo City Government may remove
        or user to remove any “Third Party” content from the application without any notice or accountability. \n\n
d.	The user is prohibited from duplicating or decompiling any “Third Party” content. \n\n
e.	The use of these services by the “Third Party” shall be the under the user’s
        own responsibilities. PYLON International Trading Company and/or San Pablo
        Government is not liable to any services that the “Third Party” provided.   \n\n

    </string>
    <string name="charges">
        \t\t The application may require charges to user’s service provider by downloading the application and/or accessing the application.
        These may charge for data roaming. All the charges are solely for the user of the application. \n
    </string>
    <string name="minimum_system">
        \t\t The user of the application must understand that some features of the
        application must need internet connection. And some features may also be available only on specific or certain operating system.
        The application will only work on compatible devices and operating systems.  \n
    </string>
    <string name="users_personal">
       a.	Some features of the application require personal information such as, User’s
        name, contact information, email address, and date of birth in order to access
        the specific feature of the application. The user must understand and give full
        consent and right to the gathering, processing and use by PYLON International
        Trading Corporation and/or San Pablo City Government of the user personal information.   \n\n
b.	All the personal information that the user had given will be gather and process under
        applicable laws of the Republic of the Philippines (Privacy Policy under Selection 11).\n\n
c.	The user must understand that some feature of the application requires access to the
        storage of the user’s device to meet the requirements of the specific feature.
        The user must give full consent and right to the gathering, processing and use by
        the PYLON International Trading Company and/or San Pablo City Government of the
        device storage and any information given above. \n

    </string>
    <string name="history1">

        \t The earliest historical record of the City of San Pablo dates
        back to pre-Spanish times when four (4) big barrios bounded by Mt. Banahaw
        and Mt. Makiling composed Sampaloc. \n \n

        \t In 1521, Sampaloc was changed to San Pablo De Los Montes, which became
        a parish in 1556 and then a municipality in 1647. In 1899, a Municipal
        Government was established by Inocente Martinez as Municipal President
        in 1902 when the Civil Government was granted independence from the Province
        of Laguna. On May 7, 1940, the charter bill, sponsored by Congressman Tomas
        Dizon was approved. The bill became known as the City Charter of San Pablo
        or Commonwealth Act No. 520. The City was inaugurated on March 30, 1941 with Dr.
        Potenciano Malvar as the appointed City Mayor. \n \n

        \t Over the years, it has flourished as a 1st class City.
        It is now being governed by Hon. Loreto S. Amante as a
        first term City Mayor until June 30, 2016. \n

    </string>
    <string name="email_adress">Email@address</string>
    <string name="lessor_address">Lessor Address</string>
    <string name="lessor_information">Lessor Information</string>
    <string name="monthly_rental">Monthly Rental</string>
    <string name="pin">PIN</string>
    <string name="street">Street</string>
    <string name="subdivision">Subdivision</string>
    <string name="unit_no">Unit No.</string>
    <string name="laguna">Laguna</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="terms_and_agreements">Terms and Agreements</string>
    <string name="i_accept">I ACCEPT</string>
    <string name="cancel">CANCEL</string>
    <string name="request_assessment">Request Assessment</string>
    <string name="online_payment">Online Payment</string>
    <string name="contact_number">Contact Number</string>
</resources>