<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                 tools:ignore="UselessParent">



        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"

                      android:id="@+id/ll_bplo_1"
                      android:orientation="vertical"
                      android:padding="10dp">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:textColor="@color/darkgray"
                      android:textStyle="bold"
                      android:layout_marginBottom="10dp"
                      android:text="@string/lessor_information" />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/last_name"
                      android:textColor="@color/darkgray"
                      android:textColorHint="@color/lightgray"
                      android:textSize="13sp"
                      android:inputType="textPersonName"
                      android:id="@+id/txt_bplo_lessor_info_lname"
                    tools:ignore="Autofill" />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/first_name"
                      android:textColor="@color/darkgray"
                      android:textColorHint="@color/lightgray"
                      android:textSize="13sp"
                      android:inputType="textPersonName"
                      android:id="@+id/txt_bplo_lessor_info_fname"
                    tools:ignore="Autofill" />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/middle_name"
                      android:textColor="@color/darkgray"
                      android:textColorHint="@color/lightgray"
                      android:textSize="13sp"
                      android:inputType="textPersonName"
                      android:id="@+id/txt_bplo_lessor_info_mname"
                    tools:ignore="Autofill" />
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="13sp"
                      android:inputType="textPostalAddress"
                      android:hint="@string/lessor_address"
                      android:textColor="@color/darkgray"
                      android:textColorHint="@color/lightgray"
                      android:clickable="false"
                      android:id="@+id/txt_bplo_lessor_info_lessor_address"
                    tools:ignore="Autofill" />


            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="13sp"
                      android:inputType="textPostalAddress"
                      android:hint="@string/street"
                      android:textColor="@color/darkgray"
                      android:textColorHint="@color/lightgray"
                      android:clickable="false"
                      android:id="@+id/txt_bplo_lessor_info_street"
                    tools:ignore="Autofill" />

            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="13sp"
                      android:inputType="textPostalAddress"
                      android:hint="@string/subdivision"
                      android:textColor="@color/darkgray"
                      android:textColorHint="@color/lightgray"
                      android:clickable="false"
                      android:id="@+id/txt_bplo_lessor_info_subdivision"
                    tools:ignore="Autofill" />

            <Spinner android:layout_width="180dp"
                     android:id="@+id/spinner_bplo_lessor_info_district"
                     android:layout_height="wrap_content"/>


            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:layout_gravity="center"
            android:gravity="center">

                <LinearLayout android:layout_width="170dp"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">


                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="13sp"
                              android:inputType="number"
                              android:hint="House No./Bldg. No."
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:id="@+id/txt_bplo_lessor_info_house_num"
                            tools:ignore="Autofill,HardcodedText" />


                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:contextClickable="false"
                              android:textSize="13sp"
                              android:inputType="text"
                              android:focusable="false"
                              android:text="San Pablo City"
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:clickable="false"
                              android:id="@+id/txt_bplo_lessor_info_city"
                                 tools:ignore="Autofill,HardcodedText,LabelFor,UnusedAttribute" />
                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="13sp"
                              android:inputType="phone"
                              android:hint="@string/contact_number"
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:id="@+id/txt_bplo_lessor_info_contact_num"
                            tools:ignore="Autofill" />

                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/email_adress"
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:textSize="13sp"
                              android:inputType="textEmailAddress"
                              android:id="@+id/txt_bplo_lessor_info_email_address"
                            tools:ignore="Autofill" />
                </LinearLayout>


                <LinearLayout android:layout_width="170dp"
                              android:layout_height="wrap_content"
                              android:orientation="vertical">


                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="13sp"
                              android:inputType="number"
                              android:hint="@string/unit_no"
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:id="@+id/txt_bplo_lessor_info_unit_num"
                            tools:ignore="Autofill" />

                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:contextClickable="false"
                              android:textSize="13sp"
                              android:inputType="date"
                              android:focusable="false"
                              android:text="@string/laguna"
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:clickable="false"
                              android:id="@+id/txt_bplo_lessor_info_province"
                            tools:ignore="Autofill,LabelFor,UnusedAttribute" />
                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="13sp"
                              android:inputType="number"
                              android:hint="@string/pin"
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:id="@+id/txt_bplo_lessor_info_pin"
                            tools:ignore="Autofill,TextFields" />
                    <EditText android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:textSize="13sp"
                              android:inputType="number"
                              android:hint="@string/monthly_rental"
                              android:textColor="@color/darkgray"
                              android:textColorHint="@color/lightgray"
                              android:id="@+id/txt_bplo_lessor_info_monthly_rental"
                            tools:ignore="Autofill" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
