<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
              android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/terms_and_agreements"
            android:textColor="@color/white"/>

    <ScrollView
            android:layout_width="match_parent"
            android:paddingTop="5dp"
            android:layout_height="250dp">

        <me.biubiubiu.justifytext.library.JustifyTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/history1"
                android:layout_marginEnd="10dp"
                android:textColor="@color/darkgray"
                android:layout_marginStart="27dp"
                android:textSize="13sp" />

    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/checkbox_accept"
                android:textStyle="bold"
                android:layout_marginEnd="10dp"
                android:layout_gravity="end"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:text="@string/i_accept"/>


    </LinearLayout>


</LinearLayout>