<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


    <TextView android:layout_width="match_parent"
            android:text="RPT PAYMENT"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="10dp"
            android:paddingStart="20dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry" />

    <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_border2"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/request_assessment"
            android:id="@+id/btn_request_assessment"/>

    <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/text_border2"
            android:padding="10dp"
            android:textStyle="bold"
            android:text="@string/online_payment"
            android:id="@+id/btn_online_payment"/>

    <TextView
            android:id="@+id/btn_bplo_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="13sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

</LinearLayout>